cmake_minimum_required(VERSION 3.13)
project(BERVET_POZZI_PAQUIER_GRAPHES)

set(CMAKE_CXX_STANDARD 14)

include_directories(BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES)
include_directories(BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/x64/Debug)
include_directories(BERVET_POZZI_PAQUIER_GRAPHES/UnitTest)

add_executable(BERVET_POZZI_PAQUIER_GRAPHES
        BERVET_POZZI_PAQUIER_GRAPHES/.vs/BERVET_POZZI_PAQUIER_GRAPHES/v15/ipch/AutoPCH/8cac185b01acde0e/CERRNO.ipch
        BERVET_POZZI_PAQUIER_GRAPHES/.vs/BERVET_POZZI_PAQUIER_GRAPHES/v15/ipch/AutoPCH/9f88db41e340f1ec/DELETE_SCALAR.ipch
        BERVET_POZZI_PAQUIER_GRAPHES/.vs/BERVET_POZZI_PAQUIER_GRAPHES/v15/ipch/fe09a8e70084c6be.ipch
        BERVET_POZZI_PAQUIER_GRAPHES/.vs/BERVET_POZZI_PAQUIER_GRAPHES/v15/Browse.VC.db
        BERVET_POZZI_PAQUIER_GRAPHES/.vs/BERVET_POZZI_PAQUIER_GRAPHES/v15/Solution.VC.db
        BERVET_POZZI_PAQUIER_GRAPHES/.vs/BERVET_POZZI_PAQUIER_GRAPHES/v15/Solution.VC.db-shm
        BERVET_POZZI_PAQUIER_GRAPHES/.vs/BERVET_POZZI_PAQUIER_GRAPHES/v15/Solution.VC.db-wal
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/x64/Debug/BERVET_P.C9CCA8E5.tlog/BERVET_POZZI_PAQUIER_GRAPHES.lastbuildstate
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/x64/Debug/BERVET_P.C9CCA8E5.tlog/CL.command.1.tlog
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/x64/Debug/BERVET_P.C9CCA8E5.tlog/CL.read.1.tlog
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/x64/Debug/BERVET_P.C9CCA8E5.tlog/CL.write.1.tlog
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/x64/Debug/BERVET_P.C9CCA8E5.tlog/link.command.1.tlog
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/x64/Debug/BERVET_P.C9CCA8E5.tlog/link.read.1.tlog
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/x64/Debug/BERVET_P.C9CCA8E5.tlog/link.write.1.tlog
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/x64/Debug/BERVET_POZZI_PAQUIER_GRAPHES.log
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/x64/Debug/BERVET_POZZI_PAQUIER_GRAPHES.obj
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/x64/Debug/BERVET_POZZI_PAQUIER_GRAPHES.pch
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/x64/Debug/CArc.obj
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/x64/Debug/Cexception.obj
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/x64/Debug/CGraphe.obj
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/x64/Debug/cgraphe.obj.enc
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/x64/Debug/CParseur.obj
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/x64/Debug/CSommet.obj
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/x64/Debug/stdafx.obj
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/x64/Debug/vc141.idb
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/x64/Debug/vc141.pdb
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES.APS
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES.cpp
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES.vcxproj
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES.vcxproj.filters
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES.vcxproj.user
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/CArc.cpp
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/CArc.h
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/Cexception.cpp
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/Cexception.h
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/CGraphe.cpp
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/CGraphe.h
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/CParseur.cpp
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/CParseur.h
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/CSommet.cpp
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/CSommet.h
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/graphe.txt
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/resource.h
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/resource1.h
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/stdafx.cpp
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/stdafx.h
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES/targetver.h
        BERVET_POZZI_PAQUIER_GRAPHES/UnitTest/CTestGraphe.cpp
        BERVET_POZZI_PAQUIER_GRAPHES/UnitTest/stdafx.cpp
        BERVET_POZZI_PAQUIER_GRAPHES/UnitTest/stdafx.h
        BERVET_POZZI_PAQUIER_GRAPHES/UnitTest/targetver.h
        BERVET_POZZI_PAQUIER_GRAPHES/UnitTest/UnitTest.vcxproj
        BERVET_POZZI_PAQUIER_GRAPHES/UnitTest/UnitTest.vcxproj.filters
        BERVET_POZZI_PAQUIER_GRAPHES/UnitTest/UnitTest.vcxproj.user
        BERVET_POZZI_PAQUIER_GRAPHES/x64/Debug/BERVET_POZZI_PAQUIER_GRAPHES.exe
        BERVET_POZZI_PAQUIER_GRAPHES/x64/Debug/BERVET_POZZI_PAQUIER_GRAPHES.ilk
        BERVET_POZZI_PAQUIER_GRAPHES/x64/Debug/BERVET_POZZI_PAQUIER_GRAPHES.pdb
        BERVET_POZZI_PAQUIER_GRAPHES/BERVET_POZZI_PAQUIER_GRAPHES.sln
        BERVET_POZZI_PAQUIER_GRAPHES/graph_class_diagram.asta
        BERVET_POZZI_PAQUIER_GRAPHES/Kilian_Vincent_Rapport_Graph.odt
        BERVET_POZZI_PAQUIER_GRAPHES/Rapport_BERVET_POZZI_PAQUIER.pdf)
